force-app/main/default/objects/Security__c/Security__c.object-meta.xml
<CustomObject>
    <description>A Security is an agreement made by the borrower as protection in case he or she defaults on the repayment. It can be e.g. another person (guarantor) or a collateral like a house or a car.</description>
    <label>Security</label>
    <nameField>
        <label>Security Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Securities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>