force-app/main/default/objects/Security__c/fields/Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Guarantor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>For securities of type &#39;Guarantee&#39;, this is a link to the actual guarantor.</description>
    <inlineHelpText>For securities of type &#39;Guarantee&#39;, this is a link to the actual guarantor.</inlineHelpText>
    <label>Guarantor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Securities (Guarantor)</relationshipLabel>
    <relationshipName>Securities</relationshipName>
    <type>Lookup</type>
</CustomField>