force-app/main/default/objects/Security__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>The IBAN Number (in case of a Bank Account guarantee)</description>
    <inlineHelpText>The IBAN Number (in case of a Bank Account guarantee)</inlineHelpText>
    <label>IBAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>