force-app/main/default/objects/Security__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Investment that this Security backs up</description>
    <inlineHelpText>The Investment that this Security backs up</inlineHelpText>
    <label>Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Securities</relationshipLabel>
    <relationshipName>Securities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>