force-app/main/default/objects/Security__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of the security. Only securites with status &#39;Confirmed&#39; will be counted as active Securities</description>
    <inlineHelpText>The status of the security. Only securites with status &#39;Confirmed&#39; will be counted as active Securities</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>