force-app/main/default/objects/Security__c/recordTypes/Collateral.recordType-meta.xml
<RecordType>
    <fullName>Collateral</fullName>
    <active>true</active>
    <description>An collateral asset for this Security.</description>
    <label>Collateral</label>
</RecordType>