force-app/main/default/objects/Security__c/recordTypes/Guarantor.recordType-meta.xml
<RecordType>
    <fullName>Guarantor</fullName>
    <active>true</active>
    <description>An institution or person is the guarantor for this Security</description>
    <label>Guarantor</label>
</RecordType>